# OpenAI-Python-GPT-4o-Quickstart

./: .replit  main.py  pyproject.toml  replit.nix
attached_assets/: Pasted--Updated-Prompt-5-Storing-Uploaded-Files-and-AI-Analysis-in-PostgreSQL-Replit-DB--1739556601886.txt  Pasted--store-metadata-extracted-text-and-AI-analysis-in-a-PostgreSQL-database-utilizing-Replit-1739556629879.txt
